# bi296

chap6/code/: Makefile  test  test.c  test.i  test.s  test2  test2.c  test2code  test3  test3.c  testcode
chap6/lecture/: hello  hello.c  makefile
chap6/lecture/advanced/: Makefile  hello  hello.c  hellofunc.c  hellofunc.h
chap7/code/: configure  hello.c
chap7/code/autom4te.cache/: output.2  requests  traces.0  traces.2
chap7/lab/: Makefile  add.c  div.c  main.c  mathop.h  mul.c  sub.c  testmymath
chap7/lecture/: Makefile
chap7/lecture/gcc/: .Makefile.am.swp  hello  hello.c  test.c  test.h  test.i  test.s  test2  test2.c
chap7/lecture/make/: Makefile1  Makefile2  Makefile3
chap7/lecture/make/hello/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  hello  hello.c
chap7/lecture/make/hello/.deps/: hello.Po
chap7/lecture/make/hello/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
chap8/code/basic/: chap8.ipynb
chap8/code/numpy/: numpy-tutorial-student.ipynb
chap8/notes/: start_jupyter.sh
chap8/notes/basic/: array_archive.npz  chap8-container.ipynb  chap8-flow.ipynb  chap8-format-string.ipynb  chap8-function-definition.ipynb  chap8-iterator&generator.ipynb  chap8-misc.ipynb  chap8-online.ipynb  chap8-oo.ipynb  chap8a-python.ipynb  chap8d-matplotlib.ipynb  chap8g-class.ipynb  chap9-ensemble.ipynb  chap9-matplotlib.ipynb  chap9-numpy.ipynb  chap9-pandas.ipynb  chap9-scikit-learn.ipynb  eg6-a-student-data.txt  misc.ipynb  sklearn-source.ipynb
chap8/scripts/: commtools.c
(+23 files in other folders)
